feat(textbooks): add support resource reading pipeline
